[package]
name = "ausnd"
version = "0.4.0"
description = "Reader and writer for AU audio format"
repository = "https://github.com/karip/ausnd"
license = "MIT OR Apache-2.0"
keywords = ["audio", "au", "codec"]
categories = ["multimedia::audio", "multimedia::encoding"]
edition = "2021"

[dependencies]
audio-codec-algorithms = "0.5.6"

[dev-dependencies]
criterion = { version = "0.5.1" }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tinyaudio = "0.1.2"

[[bench]]
name = "au_benchmark"
harness = false
